[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
]

[project]
name = "heat-transfer"
version = "0.0.1"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]
requires-python = ">= 3.8"
description = "Forced circulation heat transfer simulation"
authors = [
    { name = "Sergei Iskakov" },
]
readme = "README.md"


[tool.pylint]
max-line-length = 100
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
]

[tests]
command = "$PYTHON -m unittest"
